--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ DB_DATABASE=hashi
 DB_USERNAME=root
 DB_PASSWORD=
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
@@ -48,8 +48,8 @@ PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_HOST=
 PUSHER_PORT=443
-PUSHER_SCHEME=https
-PUSHER_APP_CLUSTER=mt1
+PUSHER_SCHEME=true
+PUSHER_APP_CLUSTER=ap1
 
 VITE_APP_NAME="${APP_NAME}"
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
@@ -58,5 +58,5 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-PAYMONGO_PUBLIC_KEY=""
-PAYMONGO_SECRET_KEY=""
+PAYMONGO_PUBLIC_KEY=
+PAYMONGO_SECRET_KEY=
