--- a/package.json
+++ b/package.json
@@ -9,28 +9,16 @@
         "@inertiajs/vue3": "^1.0.0",
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/typography": "^0.5.2",
-        "@vicons/antd": "^0.12.0",
-        "@vicons/carbon": "^0.12.0",
-        "@vicons/fa": "^0.12.0",
-        "@vicons/fluent": "^0.12.0",
-        "@vicons/ionicons4": "^0.12.0",
-        "@vicons/ionicons5": "^0.12.0",
-        "@vicons/material": "^0.12.0",
-        "@vicons/tabler": "^0.12.0",
-        "@vicons/utils": "^0.1.4",
         "@vitejs/plugin-vue": "^4.5.0",
         "autoprefixer": "^10.4.7",
-        "axios": "^1.6.1",
+        "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0.0",
-        "naive-ui": "^2.36.0",
         "postcss": "^8.4.14",
         "tailwindcss": "^3.1.0",
         "vite": "^5.0.0",
         "vue": "^3.2.31"
     },
     "dependencies": {
-        "laravel-echo": "^1.15.3",
-        "pinia": "^2.1.7",
-        "pusher-js": "^8.4.0-rc2"
+        "pinia": "^2.1.7"
     }
 }
