--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     },
     "devDependencies": {
         "@inertiajs/vue3": "^1.0.0",
+        "@storefront-ui/vue": "^2.6.0",
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/typography": "^0.5.2",
         "@vitejs/plugin-vue": "^4.5.0",
-        "autoprefixer": "^10.4.7",
+        "autoprefixer": "^10.4.18",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0.0",
-        "postcss": "^8.4.14",
-        "tailwindcss": "^3.1.0",
+        "postcss": "^8.4.35",
+        "tailwindcss": "^3.4.1",
         "vite": "^5.0.0",
         "vue": "^3.2.31"
     },
