--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue": "^3.2.31"
     },
     "dependencies": {
-        "pinia": "^2.1.7"
+        "pinia": "^2.1.7",
+        "vue3-carousel-3d": "^1.0.4"
     }
 }
